// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBoundary tests Error rendering 1`] = `
<ErrorBoundary
  notifyOnError={[MockFunction]}
>
  <FormErrorsWrapper
    error={[Error: test error!]}
  />
</ErrorBoundary>
`;

exports[`ErrorBoundary tests Regular rendering 1`] = `
<ErrorBoundary
  notifyOnError={[MockFunction]}
>
  <h1>
    Hello world!
  </h1>
</ErrorBoundary>
`;
